Adicionando configuracao do JPA, MySql e H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# data source
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pontoeletronico
+spring.datasource.username=root
+spring.datasource.password=gAmd0610@digamo0708#
+
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_coments=true
+spring.jpa.properties.hibernate.type=trace
 
