--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
