--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # data source
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pontoeletronico
+spring.datasource.url=jdbc:mysql://localhost:3306/pontoeletronico?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=gAmd0610@digamo0708#
 
